fix: invisible but overlapping nav links

--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -587,6 +587,7 @@ body {
   margin: 1rem; }
 
 .navigation__link:link, .navigation__link:visited {
+  width: 0;
   display: inline-block;
   font-size: 3rem;
   font-weight: 300;
@@ -594,7 +595,8 @@ body {
   color: #fff;
   text-decoration: none;
   text-transform: uppercase;
-  background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #fff 50%);
+  white-space: nowrap;
+  background-image: transparent;
   background-size: 230%;
   transition: all .4s; }
 
@@ -612,6 +614,11 @@ body {
 .navigation__checkbox:checked ~ .navigation__nav {
   width: 100%;
   opacity: 1; }
+  .navigation__checkbox:checked ~ .navigation__nav .navigation__link,
+  .navigation__checkbox:checked ~ .navigation__nav .navigation__link:link,
+  .navigation__checkbox:checked ~ .navigation__nav .navigation__link:visited {
+    width: auto;
+    background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #fff 50%); }
 
 .navigation__icon {
   position: relative;
